--- a/public/css/estrutura.css
+++ b/public/css/estrutura.css
@@ -52,12 +52,11 @@
     padding: 0;
 }
 
-#estrutura button{
+#estrutura a{
     background-color: #1A2352!important;
     color: #FFFFFF;
     border-radius: 17.79px;
     font-family: Grold;
-    font-size: 22.33px;
     font-weight: 400;
     line-height: 18.14px;
     letter-spacing: -0.04em;
@@ -65,7 +64,9 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     margin: 24px auto;
-    width: 25%;
+    font-size: 40px;
+    width: 33%;
+    padding: 15px;
 }
 
 @media (min-width: 575.98px){
@@ -83,7 +84,7 @@
         margin-bottom: 5px;
         border-radius: 27.85px;
     }
-    #estrutura button{
+    #estrutura a{
         width: 75%;
     }
 }
