--- a/public/css/inclusao.css
+++ b/public/css/inclusao.css
@@ -20,7 +20,6 @@
     color: #FFFFFF;
     border-radius: 17.79px;
     font-family: Grold;
-    font-size: 22.33px;
     font-weight: 400;
     line-height: 18.14px;
     letter-spacing: -0.04em;
@@ -28,7 +27,9 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     margin: 24px auto;
-    width: 25%;
+    font-size: 40px;
+    width: 33%;
+    padding: 15px;
 }
 
 #inclusao .card{
@@ -59,6 +60,7 @@
 @media (max-width: 575.98px){
     #inclusao button{
         width: 75%;
+        font-size: 20px;
     }
     #top-tag h2 {     
         font-size: 23.59px;
