--- a/public/css/escola.css
+++ b/public/css/escola.css
@@ -24,7 +24,8 @@
 }
 
 #a-escola .row.d-flex.align-items-stretch p {
-    margin: 0; /* Remove margens padrão do <p> */
+    margin: 0; /* Remove margens padrão do <p class="text-center align-items-center d-flex flex-column">
+ */
     flex: 1;   /* Expande para ocupar o espaço disponível */
 }
 
@@ -72,5 +73,6 @@
     }
     #a-escola a{
         width: 75%;
+        font-size: 20px;
     }
 }
