--- a/public/css/treinamento.css
+++ b/public/css/treinamento.css
@@ -105,7 +105,7 @@
         font-size: 23px;
     }
     #top-tag h2 {     
-        font-size: 23.59px;
+        font-size: 4vw;
     }
 
     #treinamento h1{
