--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -243,9 +243,10 @@ main {
 
     .navbar-nav .nav-link,
     .navbar-nav .nav-item .dropdown-item {
-        font-size: 1rem;
+        font-size: 3.8vw;
         /* Ajuste para 0.875rem (14px) para telas muito pequenas */
     }
+ 
 }
 
 /*END HEADER*/
@@ -477,15 +478,14 @@ main {
   }
   
   #footer-mobile ul li {
-    font-size: 14px;
     line-height: 1.6;
     background-color: #1A2352;
     margin-bottom: 6px;
-    width: 184.62px;
+    width: 100%;
     height: 33.68px;
     border-radius: 32.43px;
     font-family: Grold;
-    font-size: 20.2px;
+    font-size: 4vw;
     font-weight: 400;
     line-height: 20.2px;
     letter-spacing: -0.03em;
@@ -498,7 +498,7 @@ main {
   
   #footer-mobile h5 {
     font-family: Grold;
-    font-size: 18.57px;
+    font-size: 4vw;
     font-weight: 400;
     line-height: 12.43px;
     letter-spacing: -0.03em;
@@ -520,6 +520,7 @@ main {
   #map-container iframe {
     border-radius: 10px;
   }
+
 
 /*End Footer*/
 
