--- a/public/css/contato.css
+++ b/public/css/contato.css
@@ -5,7 +5,7 @@
     padding: 75px 30px 10px; /* Ajuste o padding conforme necessário */
     border-radius: 25px; /* Bordas arredondadas */
     font-family: Grold;
-    font-size: 47.59px;
+    font-size: 2.5vw;
     font-weight: 400;
     line-height: 41.25px;
     text-align: center;
