--- a/public/css/escola.css
+++ b/public/css/escola.css
@@ -44,7 +44,7 @@
     color: #FFFFFF;
     border-radius: 17.79px;
     font-family: Grold;
-    font-size: 30px;
+    font-size:  2.1vw;
     font-weight: 400;
     line-height: 18.14px;
     letter-spacing: -0.04em;
