--- a/public/css/estrutura.css
+++ b/public/css/estrutura.css
@@ -64,7 +64,7 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     margin: 24px auto;
-    font-size: 40px;
+    font-size: 2.5vw;
     width: 33%;
     padding: 15px;
 }
