--- a/public/css/home.css
+++ b/public/css/home.css
@@ -167,7 +167,7 @@ section#nossas-vantagens hr.my-3.d-none.d-md-block {
 
 #avaliacao-google .card-title{
   font-family: Grold;
-  font-size: 30px;
+  font-size: 2vw;
   font-weight: 400;
   line-height: 29.98px;
   letter-spacing: -0.04em;
@@ -179,7 +179,7 @@ section#nossas-vantagens hr.my-3.d-none.d-md-block {
 #avaliacao-google .card-text {
   color: #1A2352;
   font-family: Grold;
-  font-size: 25.99px;
+  font-size: 1.5vw;
   font-weight: 400;
   line-height: 29.98px;
   letter-spacing: -0.04em;
