--- a/public/css/primeirahabilitacao.css
+++ b/public/css/primeirahabilitacao.css
@@ -39,7 +39,7 @@
 
 #primeirahabilitacao .card-aula h1{
     font-family: Grold;
-    font-size: 60.28px;
+    font-size: 3vw;
     font-weight: 400;
     line-height: 42.26px;
     text-align: left;
@@ -51,7 +51,7 @@
 
 #primeirahabilitacao .card-aula p{
     font-family: Grold;
-    font-size: 25.99px;
+    font-size: 1.6vw;
     font-weight: 400;
     line-height: 25.06px;
     text-align: left;
@@ -110,7 +110,7 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     margin: 24px auto;
-    font-size: 40px;
+    font-size: 2.5vw;
     width: 33%;
     padding: 15px;
 }
